--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v1.9.1_zscaler
+appVersion: v1.9.1
 description: A Helm chart for Argo Events, the event-driven workflow automation framework
 name: argo-events
 version: 2.4.4
